room-booking-system/web/src/css/style.css
/* ... */
section.container a.button:hover {

       background: #ed786a;
}
.center {
    text-align: center;
    margin:0 auto;
    display:flex;
    align-items:center;
    justify-content:center;
}
.left {
    text-align: left;
    margin:0 auto;
    display:flex;
    align-items:left;
    justify-content:left;
}

.p20 {
    padding:20px;
}
p, h1, h2, h3, h4, h5, h6, span, div{
    //font-family: DFKai-SB,"Times New Roman", Times, serif;
    font-family: "Microsoft JhengHei","STHeiti", Papyrus, Verdana, ;
}
#header-title{
    font-weight: 700;
    color: #ed786a;
    font-size: 3em;
    letter-spacing: 10px;
    text-align: center;
}
hr {
  margin-top: 80px;
  margin-bottom: 30px;
  border-top: 4px double gray;
  width:90%;

}

.public-DraftEditor-content {
   background-color:#FFF;
   border: 4px double gray;
}
@media screen and (max-width: 1024px) {

    #eventDetailContent {
      padding: 0;
      word-wrap: break-word;
    }
    ul {
        margin: 0;
        padding: 0;
        list-style-type: none;
    }
    .left {
        display: inline-flex;
    }
    span, p {
        width:100%;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;
    }
    section.container div.row {
        display: block;
    }
    .button {
        width: 80%;
        min-width: auto;
        text-align: center;
        margin: 0 auto;
        margin-bottom: 10px;
        display:flex;
        align-items:center;
        justify-content:center;
    }
    .w50{
        width: 100% !important;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;

    }
    .w33{
        width: 100% !important;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;
    }
    .w25{
        width: 100% !important;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;

        padding-bottom:20px;
    }

    div.rbc-event-content p, div.rbc-event-content strong, div.rbc-event-label {
        display: None;
    }
    div.rbc-event-content{
        min-width: 5px;
        min-height: 50px;
    }
    div.rbc-event, div.rbc-event span{
        background:#3174ad;
        position:relative;
        animation:TestMove3 1.5s infinite alternate ease-out; /*IE*/
        -moz-animation:TestMove3 1.5s infinite alternate ease-out; /*FireFox*/
        -webkit-animation:TestMove3 1.5s infinite alternate ease-out; /*Chrome, Safari*/
    }
    @keyframes TestMove3{
        from {background-color:#3174ad;}
        to {background-color:#d2d3c9;}
    }
    @-moz-keyframes TestMove3{
        from {background-color:#3174ad;}
        to {background-color:#d2d3c9;}
    }
    @-webkit-keyframes TestMove3{
        from {background-color:#3174ad;}
        to {background-color:#d2d3c9;}
    }

    .wrapper, .wrapper__content {
        display:block;
        min-width:auto;
        max-width:100%;
        margin:0 0.5rem;
    }
    .header {

        grid-area: none;
        display: block;
    }
    .nav__item,.nav__list, .nav__link, .form__input{
        display: block;
        margin: 0 auto ;
        padding:0;
        font-size: 1.5rem;

    }
    .header__heading--main, .nav {
        text-align: center;
        background-color:#1c1c1c;
        margin: 0 auto;
        border-bottom: 2px solid #f4f4f4;
        color: #f4f4f4;
    }
    .header__heading,.header__heading--sub{
        font-size: 1.5rem;
    }
    .sidebar, .table__row td,.table__cell--header{
        display:none;
    }
    .table__row th{
        padding: 1rem 0;
    }
    .content__table{
        grid-column: 1;
        grid-row: 2;
    }
    .content__form{
        grid-column: 1;
        grid-row: 3;
        padding: 5rem 0;
        max-width:100%;
    }
    .control-item {
        min-width:auto;
        width:auto;

    }
    .form__input{
        min-height: auto;
        padding: 0.5rem 0 0.5rem 0;
        margin:0px;
        width:100%;
    }
    .table--booking{
        margin:0px;
        width:100%;
    }
    .table{
        margin: 0;
    }

    .content__calendar{
        text-align:center;
    }
    .rdtStatic{
        width:100%;
    }

    .rbc-show-more{
        overflow: visible !important;
        padding:0;
    }
    .rbc-agenda-event-cell p{
        display:none !important;
    }

    .rbc-agenda-date-cell, .rbc-agenda-time-cell{
        white-space: break-spaces !important;
    }
    .rbc-events-container{
        margin: 0 !important;
    }
    .form__grid{
        grid-column: 1;
        grid-template-columns: none;
    }
    .booking__user-info{
        grid-column: 1;
        grid-row: 1;
    }
    .user-booking-container{
        grid-column: 1;
        grid-row: 2;
        width:100%;
    }
    .booking__box{
        display:block;
        width:auto;
    }
    .wrapper__bookings{
      display:block;
    }
    .booking__innerbox--left, .header__heading--small{
        width: 100% !important;
        padding:0;
    }
    .booking__innerbox--middle {
        line-height: 200%;
    }

    .public-DraftEditor-content{
        overflow:scroll;
    }

}

